--- a/bin/node/cli/Cargo.toml
+++ b/bin/node/cli/Cargo.toml
@@ -71,6 +71,7 @@ sc-consensus-slots = { version = "0.10.0-dev", path = "../../../client/consensus
 sc-consensus-babe = { version = "0.10.0-dev", path = "../../../client/consensus/babe" }
 sc-consensus-uncles = { version = "0.10.0-dev", path = "../../../client/consensus/uncles" }
 sc-mixnet = { version = "0.1.0-dev", path = "../../../client/mixnet" }
+sc-mixnet2 = { version = "0.1.0-dev", path = "../../../client/mixnet2" }
 grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", path = "../../../client/finality-grandpa" }
 sc-rpc = { version = "4.0.0-dev", path = "../../../client/rpc" }
 sc-basic-authorship = { version = "0.10.0-dev", path = "../../../client/basic-authorship" }
