--- a/client/api/Cargo.toml
+++ b/client/api/Cargo.toml
@@ -33,6 +33,7 @@ sp-core = { version = "6.0.0", default-features = false, path = "../../primitive
 sp-database = { version = "4.0.0-dev", path = "../../primitives/database" }
 sp-externalities = { version = "0.12.0", path = "../../primitives/externalities" }
 sp-keystore = { version = "0.12.0", default-features = false, path = "../../primitives/keystore" }
+sp-mixnet-externalities-ext = { version = "0.1.0-dev", default-features = false, path = "../../primitives/mixnet/externalities-ext" }
 sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
 sp-state-machine = { version = "0.12.0", path = "../../primitives/state-machine" }
 sp-storage = { version = "6.0.0", path = "../../primitives/storage" }
