--- a/primitives/mixnet/externalities-ext/Cargo.toml
+++ b/primitives/mixnet/externalities-ext/Cargo.toml
@@ -15,6 +15,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 sp-externalities = { version = "0.12.0", default-features = false, path = "../../externalities" }
 sp-mixnet-types = { version = "0.1.0-dev", default-features = false, path = "../types" }
+sp-std = { version = "4.0.0", default-features = false, path = "../../std" }
 
 [features]
 default = ["std"]
