--- a/primitives/mixnet/runtime-api/Cargo.toml
+++ b/primitives/mixnet/runtime-api/Cargo.toml
@@ -17,8 +17,10 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 sp-api = { version = "4.0.0-dev", default-features = false, path = "../../api" }
 sp-application-crypto = { version = "6.0.0", default-features = false, path = "../../application-crypto" }
+sp-authority-discovery = { version = "4.0.0-dev", default-features = false, path = "../../authority-discovery" }
 sp-mixnet-types = { version = "0.1.0-dev", default-features = false, path = "../types" }
 sp-session = { version = "4.0.0-dev", default-features = false, path = "../../session" }
+sp-std = { version = "4.0.0", default-features = false, path = "../../std" }
 
 [features]
 default = ["std"]
@@ -27,8 +29,8 @@ std = [
 	"scale-info/std",
 	"sp-api/std",
 	"sp-application-crypto/std",
+	"sp-authority-discovery/std",
     "sp-mixnet-types/std",
     "sp-session/std",
+	"sp-std/std",
 ]
-
-[workspace]
