--- a/frame/mixnet/Cargo.toml
+++ b/frame/mixnet/Cargo.toml
@@ -20,8 +20,10 @@ frame-support = { version = "4.0.0-dev", default-features = false, path = "../su
 frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
 log = { version = "0.4.17", default-features = false }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+serde = { version = "1.0.136", optional = true }
 sp-application-crypto = { version = "6.0.0", default-features = false, path = "../../primitives/application-crypto" }
 sp-arithmetic = { version = "5.0.0", default-features = false, path = "../../primitives/arithmetic" }
+sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
 sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }
 sp-mixnet-types = { version = "0.1.0-dev", default-features = false, path = "../../primitives/mixnet/types" }
 sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
@@ -37,8 +39,10 @@ std = [
     "frame-system/std",
     "log/std",
     "scale-info/std",
+    "serde",
     "sp-application-crypto/std",
     "sp-arithmetic/std",
+	"sp-core/std",
     "sp-io/std",
     "sp-mixnet-types/std",
     "sp-runtime/std",
