--- a/primitives/mixnet/types/Cargo.toml
+++ b/primitives/mixnet/types/Cargo.toml
@@ -14,13 +14,13 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-serde = { version = "1.0.136", optional = true }
+sp-core = { version = "6.0.0", default-features = false, path = "../../core" }
 sp-std = { version = "4.0.0", default-features = false, path = "../../std" }
 
 [features]
 default = ["std"]
 std = [
     "codec/std",
-    "serde",
+	"sp-core/std",
     "sp-std/std",
 ]
