--- a/primitives/mixnet/types/Cargo.toml
+++ b/primitives/mixnet/types/Cargo.toml
@@ -16,11 +16,12 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
 serde = { version = "1.0.136", optional = true }
 sp-std = { version = "5.0.0", default-features = false, path = "../../std" }
+sp-core = { version = "7.0.0", default-features = false, path = "../../core" }
 
 [features]
 default = ["std"]
 std = [
     "codec/std",
-    "serde",
+	"sp-core/std",
     "sp-std/std",
 ]
